<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_account_settings"
        android:title="@string/menu_account_settings" />
    <item
        android:id="@+id/menu_theme"
        android:title="@string/menu_theme" />
    <item
        android:id="@+id/menu_reminders"
        android:title="@string/menu_reminders" />
    <item
        android:id="@+id/menu_export"
        android:title="@string/menu_export" />
    <item
        android:id="@+id/menu_reset"
        android:title="@string/menu_reset" />
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about" />
    <item
        android:id="@+id/menu_feedback"
        android:title="@string/menu_feedback" />
    <item
        android:id="@+id/menu_logout"
        android:title="@string/menu_logout" />
</menu>